# wave

./: Cargo.toml  README.md
snowdesk/: Cargo.toml  README.md
snowdesk/dock/: Cargo.toml
snowdesk/dock/src/: main.rs
snowdesk/finder/: Cargo.toml
snowdesk/finder/src/: main.rs
snowdesk/panel/: Cargo.toml
snowdesk/panel/src/: main.rs
snowdesk/scripts/: install_debian.sh  run_x11_session.sh
snowdesk/session/: snowdesk-session  snowdesk-x11.desktop  snowdesk.desktop
snowdesk/spotlight/: Cargo.toml
snowdesk/spotlight/src/: main.rs
snowdesk/ui/: Cargo.toml
snowdesk/ui/src/: lib.rs
snowdesk/wm/: Cargo.toml
snowdesk/wm/src/: main.rs
src/: desktop.rs  dock.rs  main.rs  menubar.rs
style/: aqua.css
